--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "@angular/router": "^0.2.0",
     "angular": "^1.6.2",
     "angular-ui-router": "1.0.0-beta.3",
-    "todomvc-app-css": "^2.0.6"
+    "todomvc-app-css": "^2.0.6",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "@types/angular": "^1.6.6",
