--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@angular/router": "^0.2.0",
     "angular": "^1.6.2",
     "angular-ui-router": "1.0.0-beta.3",
+    "sweetalert": "^2.1.0",
     "todomvc-app-css": "^2.0.6",
     "underscore": "^1.8.3"
   },
